delete from db if trying to delete and file isn't there

--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@
 * Only output errors from Media player
 * Option to play only new files
 * Option to play only unplayed file or files with play counts lower than X
+* Check for tag existance before attempting to insert
